--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forro em PVC – Cartão Digital</title>
+  <title>PVC Line Forros – Cartão Digital</title>
 
-  <meta name="description" content="Instalação de forro em PVC com qualidade, rapidez e acabamento profissional. Peça seu orçamento pelo WhatsApp.">
+  <meta name="description" content="PVC Line Forros – Instalação de forro em PVC com qualidade, rapidez e acabamento profissional. Peça seu orçamento pelo WhatsApp.">
+  <meta name="theme-color" content="#0f172a">
 
   <style>
     * {
@@ -21,79 +22,132 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #f3f4f6;
+      background: radial-gradient(circle at top, #0f172a 0, #020617 45%, #020617 100%);
       padding: 16px;
+      color: #e5e7eb;
+    }
+
+    .card-wrapper {
+      width: 100%;
+      max-width: 420px;
+    }
+
+    .chip {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 0.75rem;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(148, 163, 184, 0.5);
+      color: #e5e7eb;
+      opacity: 0.85;
+      margin-bottom: 10px;
+    }
+
+    .chip-dot {
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background: #22c55e;
     }
 
     .card {
-      background: #ffffff;
-      max-width: 420px;
-      width: 100%;
-      border-radius: 18px;
-      padding: 24px 22px 26px;
-      box-shadow: 0 16px 40px rgba(15, 23, 42, 0.15);
+      background: rgba(15, 23, 42, 0.96);
+      border-radius: 20px;
+      padding: 22px 22px 24px;
+      box-shadow:
+        0 18px 45px rgba(15, 23, 42, 0.7),
+        0 0 0 1px rgba(148, 163, 184, 0.25);
     }
 
-    .logo {
-      width: 52px;
-      height: 52px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, #0f766e, #22c55e);
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      margin-bottom: 14px;
+    }
+
+    .avatar {
+      width: 56px;
+      height: 56px;
+      border-radius: 18px;
+      background: radial-gradient(circle at 30% 20%, #22c55e, #0f766e 55%, #0f172a 100%);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #ffffff;
+      color: #ecfeff;
       font-weight: 700;
-      font-size: 20px;
-      margin-bottom: 12px;
+      font-size: 1.4rem;
+      box-shadow: 0 10px 30px rgba(15, 118, 110, 0.6);
     }
 
-    .title {
-      font-size: 1.4rem;
+    .title-block {
+      flex: 1;
+    }
+
+    .company-name {
+      font-size: 1.2rem;
       font-weight: 700;
-      color: #0f172a;
-      margin-bottom: 4px;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: #f9fafb;
+    }
+
+    .role {
+      font-size: 0.86rem;
+      color: #9ca3af;
+      margin-top: 2px;
     }
 
     .subtitle {
-      font-size: 0.98rem;
-      color: #6b7280;
-      margin-bottom: 16px;
+      font-size: 0.9rem;
+      color: #cbd5f5;
+      margin-top: 10px;
+      line-height: 1.5;
     }
 
-    .tag-list {
+    .tags {
       display: flex;
       flex-wrap: wrap;
       gap: 6px;
-      margin-bottom: 16px;
+      margin-top: 12px;
     }
 
     .tag {
-      font-size: 0.78rem;
+      font-size: 0.72rem;
       padding: 4px 10px;
       border-radius: 999px;
-      background: #ecfeff;
-      color: #0f766e;
+      background: rgba(15, 118, 110, 0.12);
+      color: #a5f3fc;
+      border: 1px solid rgba(45, 212, 191, 0.35);
     }
 
     .divider {
       height: 1px;
-      background: #e5e7eb;
-      margin: 14px 0;
+      background: radial-gradient(circle, rgba(148, 163, 184, 0.7), transparent);
+      margin: 16px 0 14px;
+      opacity: 0.65;
     }
 
-    .info-line {
+    .info-list {
       display: flex;
-      align-items: center;
+      flex-direction: column;
+      gap: 6px;
+      font-size: 0.84rem;
+      color: #e5e7eb;
+    }
+
+    .info-row {
+      display: flex;
       justify-content: space-between;
-      font-size: 0.9rem;
-      color: #4b5563;
-      margin-bottom: 6px;
-      gap: 8px;
+      gap: 10px;
     }
 
     .info-label {
       font-weight: 500;
+      color: #9ca3af;
+      white-space: nowrap;
     }
 
     .info-value {
@@ -108,10 +162,9 @@
     }
 
     .btn {
-      border: none;
       border-radius: 999px;
       padding: 10px 14px;
-      font-size: 0.98rem;
+      font-size: 0.96rem;
       cursor: pointer;
       font-weight: 600;
       display: flex;
@@ -121,112 +174,155 @@
       transition: transform 0.12s ease, box-shadow 0.12s ease, opacity 0.12s;
     }
 
+    .btn span.icon {
+      font-size: 1.1rem;
+      margin-right: 6px;
+    }
+
     .btn-primary {
-      background: #0f766e;
-      color: #ffffff;
-      box-shadow: 0 10px 20px rgba(15, 118, 110, 0.35);
+      background: linear-gradient(135deg, #22c55e, #0f766e);
+      color: #022c22;
+      box-shadow: 0 14px 32px rgba(34, 197, 94, 0.55);
     }
 
     .btn-primary:hover {
       transform: translateY(-1px);
-      box-shadow: 0 14px 26px rgba(15, 118, 110, 0.45);
+      box-shadow: 0 16px 38px rgba(34, 197, 94, 0.75);
     }
 
-    .btn-outline {
-      background: #ffffff;
-      color: #0f766e;
-      border: 1px solid #0f766e;
+    .btn-secondary {
+      background: transparent;
+      border: 1px solid rgba(148, 163, 184, 0.7);
+      color: #e5e7eb;
     }
 
-    .btn-outline:hover {
-      background: #ecfeff;
+    .btn-secondary:hover {
+      background: rgba(15, 23, 42, 0.9);
     }
 
-    .btn small {
-      opacity: 0.85;
-      font-weight: 500;
-      margin-left: 4px;
+    .social-row {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .social-pill {
+      font-size: 0.75rem;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      color: #9ca3af;
+      text-decoration: none;
     }
 
     .footer {
-      margin-top: 14px;
-      font-size: 0.74rem;
-      color: #9ca3af;
+      margin-top: 12px;
+      font-size: 0.7rem;
+      color: #6b7280;
       text-align: center;
     }
 
     @media (max-width: 480px) {
       .card {
-        padding: 20px 18px 22px;
-        border-radius: 16px;
+        padding: 18px 18px 22px;
+        border-radius: 18px;
+      }
+
+      .avatar {
+        width: 52px;
+        height: 52px;
+        font-size: 1.2rem;
+      }
+
+      .company-name {
+        font-size: 1.05rem;
       }
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <!-- Inicial da empresa, pode trocar -->
-    <div class="logo">FP</div>
-
-    <h1 class="title">Forro em PVC Profissional</h1>
-    <p class="subtitle">
-      Instalação de forro em PVC com qualidade, rapidez e acabamento perfeito.
-    </p>
-
-    <div class="tag-list">
-      <span class="tag">Residencial</span>
-      <span class="tag">Comercial</span>
-      <span class="tag">Instalação rápida</span>
-      <span class="tag">Sem sujeira</span>
+  <div class="card-wrapper">
+    <div class="chip">
+      <span class="chip-dot"></span>
+      Cartão digital profissional
     </div>
 
-    <div class="divider"></div>
+    <div class="card">
+      <div class="header">
+        <div class="avatar">PL</div>
 
-    <div class="info-line">
-      <span class="info-label">Empresa:</span>
-      <span class="info-value">Nome da sua empresa aqui</span>
-    </div>
+        <div class="title-block">
+          <div class="company-name">PVC Line Forros</div>
+          <div class="role">Instalação de forro em PVC</div>
+        </div>
+      </div>
 
-    <div class="info-line">
-      <span class="info-label">Atendemos em:</span>
-      <span class="info-value">Sua cidade e região</span>
-    </div>
+      <p class="subtitle">
+        Forros em PVC com instalação limpa, rápida e acabamento de alto padrão
+        para casas, comércios e escritórios.
+      </p>
 
-    <div class="info-line">
-      <span class="info-label">Horário:</span>
-      <span class="info-value">Seg a Sáb – 8h às 18h</span>
-    </div>
+      <div class="tags">
+        <span class="tag">Forro PVC</span>
+        <span class="tag">Residencial & Comercial</span>
+        <span class="tag">Instalação rápida</span>
+        <span class="tag">Sem sujeira</span>
+      </div>
 
-    <div class="btns">
-      <a
-        class="btn btn-primary"
-        id="btnWhats"
-        href="#"
-        target="_blank"
-        rel="noopener"
-      >
-        Falar no WhatsApp
-        <small>(pedir orçamento)</small>
-      </a>
+      <div class="divider"></div>
 
-      <a
-        class="btn btn-outline"
-        href="tel:+550000000000"
-      >
-        Ligar agora
-      </a>
-    </div>
+      <div class="info-list">
+        <div class="info-row">
+          <span class="info-label">Contato:</span>
+          <span class="info-value">(11) 98888-1234</span>
+        </div>
+        <div class="info-row">
+          <span class="info-label">Atendemos em:</span>
+          <span class="info-value">São Paulo e região metropolitana</span>
+        </div>
+        <div class="info-row">
+          <span class="info-label">Horário:</span>
+          <span class="info-value">Seg a Sáb • 8h às 18h</span>
+        </div>
+      </div>
 
-    <div class="footer">
-      Cartão digital de demonstração – personalize com seus dados reais.
+      <div class="btns">
+        <a
+          class="btn btn-primary"
+          id="btnWhats"
+          href="#"
+          target="_blank"
+          rel="noopener"
+        >
+          <span class="icon">💬</span>
+          Falar no WhatsApp
+        </a>
+
+        <a
+          class="btn btn-secondary"
+          href="tel:+5511988881234"
+        >
+          <span class="icon">📞</span>
+          Ligar agora
+        </a>
+      </div>
+
+      <div class="social-row">
+        <a class="social-pill" href="#" target="_blank" rel="noopener">
+          Instagram da empresa
+        </a>
+      </div>
+
+      <div class="footer">
+        PVC Line Forros • Cartão digital de demonstração.
+      </div>
     </div>
   </div>
 
   <script>
-    // 🔧 1) Troque aqui pelo número REAL do WhatsApp:
-    // formato: 55 + DDD + número (sem espaço, sem traço)
-    const phone = "550000000000"; // exemplo: 5599999999999
-
+    // número fictício – troque depois se quiser
+    const phone = "5511988881234"; // 55 + DDD + número
     const msg = encodeURIComponent(
       "Olá! Gostaria de um orçamento de forro em PVC."
     );
